tests/compile_fail/instances_macro_malformed_connection.stderr
error: expected `:`
  --> tests/compile_fail/instances_macro_malformed_connection.rs:10:19
   |
10 |                 a = a,
   |                   ^
